@@ -40,8 +40,8 @@ if(MSVC)
 		-DHAVE_INTTYPES_H
 		-DHAVE_IO_H
 		-DHAVE_STDINT_H
-		-DHAVE_STRUCT__STAT64
 		-DHAVE__STAT64
+		-DHAVE_STRUCT__STAT64
 		-DHAVE__COMMIT
 		-DGD_NO_C99_API
 		)
