@@ -24,6 +24,10 @@ int main(void)
   DIRFILE *D;
 
   mkdir(filedir, 0777);
+  // when using msvc the macro mkdir removes dirfile
+#ifdef mkdir
+#undef mkdir
+#endif
   mkdir(subdir, 0777);
 
   fd = open(format, O_CREAT | O_EXCL | O_WRONLY, 0666);
